Fixed some spacing inconsistencies in the invoice template and added a subtotal and tax field to the tmeplate

--- a/pages/assets/invoice.css
+++ b/pages/assets/invoice.css
@@ -61,7 +61,6 @@
 
 .invoice-box table tr.total td:nth-child(2) {
     border-top: 2px solid #eee;
-    font-weight: bold;
 }
 
 @media only screen and (max-width: 600px) {
